# ellipt

./: NullSpaceMethods.m.nb  ellipticSolber.nb  help.m
src/step-1/: ApproximateSchurComplement.cpp  ApproximateSchurComplementPoisson.cpp  CMakeLists.txt  DirichletBoundaryValues.cpp  DirichletBoundaryValues.hpp  DirichletBoundaryValuesDot.cpp  DirichletBoundaryValuesDot.hpp  DirichletBoundaryValuesPoisson.hpp  EllipticProblem.cpp  EllipticProblem.hpp  InitialValuesU.hpp  InverseDiffusivity.cpp  InverseDiffusivity.hpp  LDG.hpp  LDGErrorIntegrator.cpp  LDGErrorIntegrator.hpp  LDGIntegrator.cpp  LDGIntegrator.hpp  LDGIntegratorDrift.cpp  LDGIntegratorDrift.hpp  LDGIntegratorKENT.cpp  NeumannBoundaryValues.cpp  NeumannBoundaryValues.hpp  PSigmaPStar.hpp  Q_UStar_SStar_inverseMassQ_S_U_Q.cpp  Q_UStar_SStar_inverseMassQ_S_U_Q.hpp  Q_UStar_massU_U_QStar.hpp  SS_UStar_TotalQFromU_U_QQStar.hpp  SchurComplement.cpp  SchurComplement.hpp  SchurComplementNEW.cpp  SchurComplementPoisson.cpp  SchurComplementPoisson2.cpp  SourceBodyValues.cpp  SourceBodyValues.hpp  globals.hpp  matrix_chain.hpp  myMatrixTools.hpp  step-1.cpp
src/step-2/: ApproximateSchurComplement.hpp  ApproximateSchurComplementPoisson.hpp  DirichletBoundaryValuesDot.cpp  DirichletBoundaryValuesPoisson.cpp  EllipticProblem.cpp  EllipticProblem.hpp  InitialValuesU.cpp  InverseDiffusivity.cpp  LDG.hpp  LDGErrorIntegrator.cpp  LDGErrorIntegrator.hpp  LDGIntegrator.cpp  LDGIntegrator.hpp  LDGIntegratorKENT.cpp  LDGIntegratorKENT.hpp  NeumanBoundaryValuesPoisson.cpp  NeumanBoundaryValuesPoisson.hpp  NeumannBoundaryValues.cpp  (+17 more)
